<?xml version="1.0"?>
<package>
  <name>basicbot_ga</name>
  <version>0.0.0</version>
  <description>This package provides a Python node within the ROS system that 
  communicates with an outside optimization algorithm to simulate the basicbot.  Multiple 
  instances of this package can be launched at once to provide a set of simulation 
  services.</description>

  <maintainer email="moorejar@gvsu.edu">Jared Moore</maintainer>

  <license>GPLv3</license>
  
  <!-- <url type="website">http://wiki.ros.org/adding_service</url> -->

  <author email="moorejar@gvsu.edu">Jared Moore</author>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
