<package>
  <name>basicbot_control</name>
  <version>0.0.1</version>
  <description>
     basicbot_control provides the control scripts for commanding the BasicBot.
  </description>
  <author email="swiftfoottim@gmail.com">Jared Moore</author>
  <maintainer email="swiftfoottim@gmail.com">Jared Moore</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/turtlebot_description</url> -->
  <!-- <url type="repository">https://github.com/turtlebot/turtlebot</url> -->
  <!-- <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url> -->
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
