<package>
  <name>basicbot_description</name>
  <version>0.0.1</version>
  <description>
     basicbot_description provides the urdf and xacro files needed to build a basicbot.
  </description>
  <author email="swiftfoottim@gmail.com">Jared Moore</author>
  <maintainer email="swiftfoottim@gmail.com">Jared Moore</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/turtlebot_description</url> -->
  <!-- <url type="repository">https://github.com/turtlebot/turtlebot</url> -->
  <!-- <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url> -->
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
